# asdf-transform-schemas

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: asdf_transform_schemas_ci.yml  ci.yml  downstream.yml
docs/: conf.py  index.rst  intro.rst  legacy.rst  manifests.rst  schemas.rst  transforms.rst
docs/_static/: custom.css
format_ideas/: gaussian1d-option-1.yaml  gaussian1d-option-2.yaml  gaussian1d-option-3.yaml  gaussian1d-option-4.yaml
gaussian_example/: gaussian1d-1.0-examples.yaml  gaussian1d-1.0.yaml  transform_base-1.0.yaml
resources/asdf-format.org/manifests/: transform-1.0.0.yaml  transform-1.1.0.yaml  transform-1.2.0.yaml  transform-1.3.0.yaml  transform-1.4.0.yaml  transform-1.5.0.yaml  transform-1.6.0.yaml  transform-1.7.0.yaml
resources/stsci.edu/manifests/: transform-1.0.0.yaml  transform-1.1.0.yaml  transform-1.2.0.yaml  transform-1.3.0.yaml  transform-1.4.0.yaml  transform-1.5.0.yaml
resources/stsci.edu/schemas/: add-1.3.0.yaml  add-1.4.0.yaml  affine-1.4.0.yaml  affine-1.5.0.yaml  airy-1.0.0.yaml  airy-1.1.0.yaml  airy-1.2.0.yaml  airy-1.3.0.yaml  airy-1.4.0.yaml  airy_disk2d-1.0.0.yaml  airy_disk2d-1.1.0.yaml  airy_disk2d-1.2.0.yaml  arccosine1d-1.0.0.yaml  arccosine1d-1.1.0.yaml  arccosine1d-1.2.0.yaml  arcsine1d-1.0.0.yaml  arcsine1d-1.1.0.yaml  arcsine1d-1.2.0.yaml  arctangent1d-1.0.0.yaml  arctangent1d-1.1.0.yaml  arctangent1d-1.2.0.yaml  blackbody-1.0.0.yaml  blackbody-1.1.0.yaml  blackbody-1.2.0.yaml  bonne_equal_area-1.4.0.yaml  bonne_equal_area-1.5.0.yaml  bounding_box-1.0.0.yaml  box1d-1.0.0.yaml  box1d-1.1.0.yaml  box1d-1.2.0.yaml  box2d-1.1.0.yaml  box2d-1.2.0.yaml  broken_power_law1d-1.2.0.yaml  cobe_quad_spherical_cube-1.0.0.yaml  cobe_quad_spherical_cube-1.1.0.yaml  cobe_quad_spherical_cube-1.2.0.yaml  cobe_quad_spherical_cube-1.3.0.yaml  cobe_quad_spherical_cube-1.4.0.yaml  compose-1.3.0.yaml  compose-1.4.0.yaml  (+250 more)
resources/stsci.edu/schemas/property/: bounding_box-1.0.0.yaml  bounding_box-1.1.0.yaml  bounding_box-1.2.0.yaml  compound_bounding_box-1.0.0.yaml  compound_bounding_box-1.2.0.yaml
schema_collections/: transform-2.0.0.yaml
schemas/: add-2.0.0.yaml  affine-2.0.0.yaml  airy-2.0.0.yaml  airy_disk2d-2.0.0.yaml  blackbody-2.0.0.yaml  bonne_equal_area-2.0.0.yaml  box1d-2.0.0.yaml  box2d-2.0.0.yaml  broken_power_law1d-2.0.0.yaml  cobe_quad_spherical_cube-2.0.0.yaml  compose-2.0.0.yaml  concatenate-2.0.0.yaml  conic-2.0.0.yaml  conic_equal_area-2.0.0.yaml  conic_equidistant-2.0.0.yaml  conic_orthomorphic-2.0.0.yaml  conic_perspective-2.0.0.yaml  constant-2.0.0.yaml  cylindrical-2.0.0.yaml  cylindrical_equal_area-2.0.0.yaml  cylindrical_perspective-2.0.0.yaml  disk2d-2.0.0.yaml  divide-2.0.0.yaml  domain-2.0.0.yaml  drude1d-2.0.0.yaml  ellipse2d-2.0.0.yaml  exponential1d-2.0.0.yaml  exponential_cutoff_power_law1d-2.0.0.yaml  fix_inputs-2.0.0.yaml  gaussian1d-2.0.0.yaml  gaussian2d-2.0.0.yaml  generic-2.0.0.yaml  gnomonic-2.0.0.yaml  hammer_aitoff-2.0.0.yaml  healpix-2.0.0.yaml  healpix_polar-2.0.0.yaml  identity-2.0.0.yaml  king_projected_analytic1d-2.0.0.yaml  label_mapper-2.0.0.yaml  linear1d-2.0.0.yaml  (+53 more)
scripts/: generate_manifest.py  import_transforms.py
src/asdf_transform_schemas/: extension.py  integration.py
tests/: conftest.py  test_extension.py  test_integration.py  test_invalid.py  test_manifests.py  test_schemas.py
