[project]
name = 'asdf_transform_schemas'
description = 'ASDF schemas for transforms'
readme = 'README.md'
requires-python = '>=3.10'
license-files = ['LICENSE']
authors = [{ name = 'The ASDF Developers' }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Development Status :: 5 - Production/Stable',
]
dependencies = [
    'asdf-standard >= 1.1.0',
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    'tomli',
    'sphinx',
    'sphinx-asdf >= 0.1.3',
    'sphinx-astropy',
    'astropy >= 5.0.4',
    'graphviz',
    'matplotlib',
    'docutils',
    'furo',
]
test = [
    'asdf >= 2.8.0',
    'asdf-astropy',
    'scipy',
    'pytest',
    'pytest-asdf-plugin',
]

[project.urls]
'tracker' = 'https://github.com/asdf-format/asdf-transform-schemas/issues'
'documentation' = 'https://www.asdf-format.org/projects/asdf-transform-schemas/en/latest'
'repository' = 'https://github.com/asdf-format/asdf-transform-schemas'

[project.entry-points]
'asdf.resource_mappings' = { asdf_transform_schemas = 'asdf_transform_schemas.integration:get_resource_mappings' }

[build-system]
requires = [
    "setuptools >77",
    "setuptools_scm[toml] >=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/asdf_transform_schemas/_version.py"

[tool.setuptools]
packages = ["asdf_transform_schemas", "asdf_transform_schemas.resources"]

[tool.setuptools.package-data]
"asdf_transform_schemas.resources" = ["resources/**/*.yaml"]

[tool.setuptools.package-dir]
'' = "src"
"asdf_transform_schemas.resources" = "resources"

[tool.pytest.ini_options]
asdf_schema_root = 'resources/stsci.edu/schemas'
asdf_schema_tests_enabled = 'true'
asdf_schema_ignore_unrecognized_tag = 'true'
testpaths = """
    tests
    resources
"""
addopts = '--color=yes'

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | build
    | dist
  )/
)
'''

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes, autoflake
    "I", # isort
    "S", # bandit
    "UP", # pyupgrade
    "RUF",  # ruff specific, includes yesqa
]
extend-ignore = [
    "RUF005",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]
"tests/*" = ["S101"]
"scripts/*" = ["S603"]

[tool.codespell]
ignore-words-list="""
COO,
"""
skip="""
*.pdf,*.fits,*.asdf,.tox,build,./tags,.git,docs/build,
resources/asdf-format.org/manifests/transform-1.0.0.yaml,
resources/asdf-format.org/manifests/transform-1.1.0.yaml,
resources/asdf-format.org/manifests/transform-1.2.0.yaml,
resources/asdf-format.org/manifests/transform-1.3.0.yaml,
resources/asdf-format.org/manifests/transform-1.4.0.yaml,
resources/asdf-format.org/manifests/transform-1.5.0.yaml,
resources/asdf-format.org/manifests/transform-1.6.0.yaml,
resources/asdf-format.org/manifests/transform-1.7.0.yaml,
resources/stsci.edu/schemas/conic_perspective-1.0.0.yaml,
resources/stsci.edu/schemas/conic_perspective-1.1.0.yaml,
resources/stsci.edu/schemas/conic_perspective-1.2.0.yaml,
resources/stsci.edu/schemas/conic_perspective-1.3.0.yaml,
resources/stsci.edu/schemas/conic_perspective-1.4.0.yaml,
resources/stsci.edu/schemas/conic_perspective-1.5.0.yaml,
resources/stsci.edu/schemas/math_functions-1.0.0.yaml,
resources/stsci.edu/schemas/math_functions-1.1.0.yaml,
resources/stsci.edu/schemas/math_functions-1.2.0.yaml,
resources/stsci.edu/schemas/ortho_polynomial-1.0.0.yaml,
resources/stsci.edu/schemas/ortho_polynomial-1.1.0.yaml,
resources/stsci.edu/schemas/ortho_polynomial-1.2.0.yaml,
resources/stsci.edu/schemas/shift-1.0.0.yaml,
resources/stsci.edu/schemas/shift-1.1.0.yaml,
resources/stsci.edu/schemas/shift-1.2.0.yaml,
resources/stsci.edu/schemas/shift-1.3.0.yaml,
resources/stsci.edu/schemas/shift-1.4.0.yaml,
"""
