[metadata]
name = asdf_transform_schemas
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE
description = ASDF schemas for transforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spacetelescope/asdf-transform-schemas

[options]
python_requires = >=3.6
zip_safe = false
setup_requires =
    setuptools
    setuptools_scm

[options.extras_require]
test =
    pytest
    asdf

[options.package_data]
* = *.yaml

[options.entry_points]
asdf_extensions =
    asdf_transform_schemas = asdf_transform_schemas.extension:AsdfTransformSchemasExtension

[tool:pytest]
asdf_schema_root = schemas
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
testpaths =
    tests
    schemas

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg, .tox
