[metadata]
name = asdf_transform_schemas
author = The ASDF Developers
author_email = help@stsci.edu
license = BSD-3-Clause
license_file = LICENSE
description = ASDF schemas for transforms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asdf-format/asdf-transform-schemas

[options]
python_requires = >=3.6
zip_safe = true
setup_requires =
    setuptools
    setuptools_scm
install_requires =
    asdf
    importlib_resources>=3;python_version<"3.9"

[options.extras_require]
test =
    pytest

[options.entry_points]
asdf.resource_mappings =
    asdf_transform_schemas = asdf_transform_schemas.integration:get_resource_mappings

[tool:pytest]
asdf_schema_root = resources/stsci.edu/schemas
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
testpaths =
    tests
    resources

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg, .tox
